syntax = "proto3";

package user_v1;

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";

option go_package = "github.com/GoSeoTaxi/olegMicroserviceAuth/grpc/pkg/user_v1;user_v1";

// Common type
enum RoleEnum {
  user = 0;
  admin = 1;
}
// End Common type


service UserV1 {
  rpc Create(CreateRequest) returns (CreateResponse);
  rpc Get(GetRequest) returns (GetResponse);
  rpc Update(UpdateRequest) returns (google.protobuf.Empty);
  rpc Delete(DeleteRequest) returns (google.protobuf.Empty);
}

// Create
message UserInfoCreate {
  string name = 1;
  string email = 2;
  string password = 3;
  string password_confirm = 4;
  RoleEnum role = 5;
}

message CreateRequest {
  UserInfoCreate userCreate = 1;
}

message CreateResponse {
  int64 id = 1;
}

// Get
message GetRequest {
  int64 id = 1;
}

message GetResponse {
  UserInfo userInfo = 1;
}

message UserInfo {
  int64 id = 1;
  string name = 2;
  string email = 3;
  RoleEnum role = 4;
  google.protobuf.Timestamp created_at = 5;
  google.protobuf.Timestamp update_at = 6;
}

// Update
message UpdateRequest {
  int64 id = 1;
  google.protobuf.StringValue name = 2;
  google.protobuf.StringValue email = 3;
  RoleEnum role = 4;
}

// Delete
message DeleteRequest {
  int64 id = 1;
}
